src/test/ui/issues/issue-50264-inner-deref-trait/result-as_deref_err.rs
#![feature(inner_deref)]

fn main() {
    let _result = &Err(41).as_deref_err();
//~^ ERROR no method named `as_deref_err` found
}
